--- a/config
+++ b/config
@@ -1,16 +1,16 @@
-vless://148709e4-402b-48dd-8892-ed39b55ea45c@104.18.43.76:443?encryption=none&security=tls&sni=barayeiranmahsang.loseyourself.dpdns.org&fp=random&type=ws&host=barayeiranmahsang.loseyourself.dpdns.org&path=%2FBarayeiranmahsang%3Fed%3D2560#%D8%A8%D9%87%20%DB%8C%D8%A7%D8%AF%20%D8%B3%D8%A7%D8%B1%DB%8C%D9%86%D8%A710
+vless://148709e4-402b-48dd-8892-ed39b55ea45c@104.18.26.90:443?encryption=none&security=tls&sni=barayeiranmahsang.loseyourself.dpdns.org&fp=random&type=ws&host=barayeiranmahsang.loseyourself.dpdns.org.&path=%2FBarayeiranmahsang%3Fed%3D2560#%D8%A8%D9%87%20%DB%8C%D8%A7%D8%AF%20%D8%B3%D8%A7%D8%B1%DB%8C%D9%86%D8%A710
 
-vless://dfdf1c0a-5e52-4746-88bd-19d4e4ac7853@104.22.24.177:443?encryption=none&security=tls&sni=barayeiranmahsang.juveitaly.dpdns.org&fp=random&type=ws&host=barayeiranmahsang.juveitaly.dpdns.org&path=%2FBarayeiranmahsang%3Fed%3D2560#%D8%A8%D9%87%20%DB%8C%D8%A7%D8%AF%20%D8%B3%D8%A7%D8%B1%DB%8C%D9%86%D8%A72
+vless://dfdf1c0a-5e52-4746-88bd-19d4e4ac7853@104.18.26.90:443?encryption=none&security=tls&sni=barayeiranmahsang.juveitaly.dpdns.org&fp=random&type=ws&host=barayeiranmahsang.juveitaly.dpdns.org&path=%2FBarayeiranmahsang%3Fed%3D2560#%D8%A8%D9%87%20%DB%8C%D8%A7%D8%AF%20%D8%B3%D8%A7%D8%B1%DB%8C%D9%86%D8%A72
 
 vless://948f6596-66f9-4707-aa92-3107a214ce53@104.16.108.43:80?encryption=none&security=none&sni=fb69a061.shalamshorba.dpdns.org&fp=random&type=ws&host=fb69a061.shalamshorba.dpdns.org&path=BarayeIranmahsang%2F%3Fed%3D2560#%D8%A8%D9%87%20%DB%8C%D8%A7%D8%AF%20%D8%B3%D8%A7%D8%B1%DB%8C%D9%86%D8%A712
 
-vless://b28eb861-1748-4200-ba72-278669edc33b@172.67.252.98:80?encryption=none&security=none&sni=barayeiranmahsang.mahmoodchitooz.dpdns.org&fp=random&type=ws&host=barayeiranmahsang.mahmoodchitooz.dpdns.org&path=%2FBarayeiranmahsang%3Fed%3D2560#%D8%A8%D9%87%20%DB%8C%D8%A7%D8%AF%20%D8%B3%D8%A7%D8%B1%DB%8C%D9%86%D8%A717
+vless://b28eb861-1748-4200-ba72-278669edc33b@172.67.252.98:80?encryption=none&security=none&sni=barayeiranmahsang.mahmoodchitooz.dpdns.org&fp=random&type=ws&host=barayeiranmahsang.mahmoodchitooz.dpdns.org.&path=%2FBarayeiranmahsang%3Fed%3D2560#%D8%A8%D9%87%20%DB%8C%D8%A7%D8%AF%20%D8%B3%D8%A7%D8%B1%DB%8C%D9%86%D8%A717
 
-vless://148709e4-402b-48dd-8892-ed39b55ea45c@172.67.136.116:80?encryption=none&security=none&sni=barayeiranmahsang.loseyourself.dpdns.org&fp=random&type=ws&host=barayeiranmahsang.loseyourself.dpdns.org&path=%2FBarayeiranmahsang%3Fed%3D2560#%D8%A8%D9%87%20%DB%8C%D8%A7%D8%AF%20%D8%B3%D8%A7%D8%B1%DB%8C%D9%86%D8%A716
+vless://148709e4-402b-48dd-8892-ed39b55ea45c@172.67.136.116:80?encryption=none&security=none&sni=barayeiranmahsang.loseyourself.dpdns.org&fp=random&type=ws&host=barayeiranmahsang.loseyourself.dpdns.org.&path=%2FBarayeiranmahsang%3Fed%3D2560#%D8%A8%D9%87%20%DB%8C%D8%A7%D8%AF%20%D8%B3%D8%A7%D8%B1%DB%8C%D9%86%D8%A716
 
-vless://b28eb861-1748-4200-ba72-278669edc33b@104.24.171.48:443?encryption=none&security=tls&sni=barayeiranmahsang.mahmoodchitooz.dpdns.org&fp=random&type=ws&host=barayeiranmahsang.mahmoodchitooz.dpdns.org&path=%2FBarayeiranmahsang%3Fed%3D2560#%D8%A8%D9%87%20%DB%8C%D8%A7%D8%AF%20%D8%B3%D8%A7%D8%B1%DB%8C%D9%86%D8%A75
+vless://b28eb861-1748-4200-ba72-278669edc33b@104.18.26.90:443?encryption=none&security=tls&sni=barayeiranmahsang.mahmoodchitooz.dpdns.org&fp=random&type=ws&host=barayeiranmahsang.mahmoodchitooz.dpdns.org.&path=%2FBarayeiranmahsang%3Fed%3D2560#%D8%A8%D9%87%20%DB%8C%D8%A7%D8%AF%20%D8%B3%D8%A7%D8%B1%DB%8C%D9%86%D8%A75
 
-vless://dfdf1c0a-5e52-4746-88bd-19d4e4ac7853@104.24.163.153:443?encryption=none&security=tls&sni=barayeiranmahsang.juveitaly.dpdns.org&fp=random&type=ws&host=barayeiranmahsang.juveitaly.dpdns.org&path=%2FBarayeiranmahsang%3Fed%3D2560#%D8%A8%D9%87%20%DB%8C%D8%A7%D8%AF%20%D8%B3%D8%A7%D8%B1%DB%8C%D9%86%D8%A78
+vless://dfdf1c0a-5e52-4746-88bd-19d4e4ac7853@104.18.26.90:443?encryption=none&security=tls&sni=barayeiranmahsang.juveitaly.dpdns.org&fp=random&type=ws&host=barayeiranmahsang.juveitaly.dpdns.org&path=%2FBarayeiranmahsang%3Fed%3D2560#%D8%A8%D9%87%20%DB%8C%D8%A7%D8%AF%20%D8%B3%D8%A7%D8%B1%DB%8C%D9%86%D8%A78
 
 vless://f78ce1bb-0fa6-4ef4-b4c9-b91014a7055d@104.24.135.83:80?encryption=none&security=none&sni=delam.ahaysiahzangi.dpdns.org&fp=random&type=ws&host=delam.ahaysiahzangi.dpdns.org&path=%2FBarayeiranmahsang%3Fed%3D2560#%D8%A8%D9%87%20%DB%8C%D8%A7%D8%AF%20%D8%B3%D8%A7%D8%B1%DB%8C%D9%86%D8%A720
 
@@ -24,7 +24,7 @@ vless://f78ce1bb-0fa6-4ef4-b4c9-b91014a7055d@172.67.21.2:80?encryption=none&secu
 
 vless://948f6596-66f9-4707-aa92-3107a214ce53@104.21.103.107:80?encryption=none&security=none&sni=fb69a061.shalamshorba.dpdns.org&fp=random&type=ws&host=fb69a061.shalamshorba.dpdns.org&path=BarayeIranmahsang%2F%3Fed%3D2560#%D8%A8%D9%87%20%DB%8C%D8%A7%D8%AF%20%D8%B3%D8%A7%D8%B1%DB%8C%D9%86%D8%A727
 
-vless://dfdf1c0a-5e52-4746-88bd-19d4e4ac7853@104.19.85.249:443?encryption=none&security=tls&sni=barayeiranmahsang.juveitaly.dpdns.org&fp=random&type=ws&host=barayeiranmahsang.juveitaly.dpdns.org&path=%2FBarayeiranmahsang%3Fed%3D2560#%D8%A8%D9%87%20%DB%8C%D8%A7%D8%AF%20%D8%B3%D8%A7%D8%B1%DB%8C%D9%86%D8%A723
+vless://dfdf1c0a-5e52-4746-88bd-19d4e4ac7853@104.18.26.90:443?encryption=none&security=tls&sni=barayeiranmahsang.juveitaly.dpdns.org&fp=random&type=ws&host=barayeiranmahsang.juveitaly.dpdns.org&path=%2FBarayeiranmahsang%3Fed%3D2560#%D8%A8%D9%87%20%DB%8C%D8%A7%D8%AF%20%D8%B3%D8%A7%D8%B1%DB%8C%D9%86%D8%A723
 
 vless://f78ce1bb-0fa6-4ef4-b4c9-b91014a7055d@172.67.67.92:80?encryption=none&security=none&sni=delam.ahaysiahzangi.dpdns.org&fp=random&type=ws&host=delam.ahaysiahzangi.dpdns.org&path=%2FBarayeiranmahsang%3Fed%3D2560#%D8%A8%D9%87%20%DB%8C%D8%A7%D8%AF%20%D8%B3%D8%A7%D8%B1%DB%8C%D9%86%D8%A728
 
