--- a/config
+++ b/config
@@ -107,9 +107,9 @@ vless://bbd2882a-c158-4ae6-b53a-5ae6be8dbcb0@104.22.51.138:443?encryption=none&s
 
 vless://b8be6118-0dd7-4402-ae1a-69b2816f3a7f@104.22.53.5:443?encryption=none&security=tls&sni=br.presskiwi.dpdns.org&fp=random&type=ws&host=br.presskiwi.dpdns.org&path=%2F%3Fed%3D2560#55%D8%A8%D9%87%20%DB%8C%D8%A7%D8%AF%20%D8%B3%D8%A7%D8%B1%DB%8C%D9%86%D8%A7
 
-vless://6f690965-3be3-43bb-9331-3ead6efb20aa@104.21.7.210:443?encryption=none&security=tls&sni=sib.sibzamini.dpdns.org&fp=random&type=ws&host=sib.sibzamini.dpdns.org&path=%2FBarayeiranmahsang%3Fed%3D2560#57%D8%A8%D9%87%20%DB%8C%D8%A7%D8%AF%20%D8%B3%D8%A7%D8%B1%DB%8C%D9%86%D8%A7
+vless://6f690965-3be3-43bb-9331-3ead6efb20aa@104.21.7.210:443?encryption=none&security=tls&sni=barayeiranmahsang.sibzamini.dpdns.org&fp=random&type=ws&host=barayeiranmahsang.sibzamini.dpdns.org&path=%2FBarayeiranmahsang%3Fed%3D2560#57%D8%A8%D9%87%20%DB%8C%D8%A7%D8%AF%20%D8%B3%D8%A7%D8%B1%DB%8C%D9%86%D8%A7
 
-vless://6f690965-3be3-43bb-9331-3ead6efb20aa@104.22.57.179:443?encryption=none&security=tls&sni=sib.sibzamini.dpdns.org&fp=random&type=ws&host=sib.sibzamini.dpdns.org&path=%2F%3Fed%3D2560#61%D8%A8%D9%87%20%DB%8C%D8%A7%D8%AF%20%D8%B3%D8%A7%D8%B1%DB%8C%D9%86%D8%A7
+vless://6f690965-3be3-43bb-9331-3ead6efb20aa@104.22.57.179:443?encryption=none&security=tls&sni=barayeiranmahsang.sibzamini.dpdns.org&fp=random&type=ws&host=barayeiranmahsang.sibzamini.dpdns.org&path=%2F%3Fed%3D2560#61%D8%A8%D9%87%20%DB%8C%D8%A7%D8%AF%20%D8%B3%D8%A7%D8%B1%DB%8C%D9%86%D8%A7
 
 vless://4179c595-08ca-45cd-b555-91b6f1faeadc@104.19.30.19:443?encryption=none&security=tls&sni=di.dibdibini.dpdns.org&fp=random&type=ws&host=di.dibdibini.dpdns.org&path=%2F%3Fed%3D2560#58%D8%A8%D9%87%20%DB%8C%D8%A7%D8%AF%20%D8%B3%D8%A7%D8%B1%DB%8C%D9%86%D8%A7
 
@@ -117,15 +117,15 @@ vless://4179c595-08ca-45cd-b555-91b6f1faeadc@104.25.107.242:443?encryption=none&
 
 vless://4179c595-08ca-45cd-b555-91b6f1faeadc@104.25.125.251:443?encryption=none&security=tls&sni=di.dibdibini.dpdns.org&fp=random&type=ws&host=di.dibdibini.dpdns.org&path=%2FBarayeiranmahsang%3Fed%3D2560#62%D8%A8%D9%87%20%DB%8C%D8%A7%D8%AF%20%D8%B3%D8%A7%D8%B1%DB%8C%D9%86%D8%A7
 
-vless://6f690965-3be3-43bb-9331-3ead6efb20aa@162.159.246.217:443?encryption=none&security=tls&sni=sib.sibzamini.dpdns.org&fp=random&type=ws&host=sib.sibzamini.dpdns.org&path=%2FBarayeiranmahsang%3Fed%3D2560#59%D8%A8%D9%87%20%DB%8C%D8%A7%D8%AF%20%D8%B3%D8%A7%D8%B1%DB%8C%D9%86%D8%A7
+vless://6f690965-3be3-43bb-9331-3ead6efb20aa@162.159.246.217:443?encryption=none&security=tls&sni=barayeiranmahsang.sibzamini.dpdns.org&fp=random&type=ws&host=barayeiranmahsang.sibzamini.dpdns.org.&path=%2FBarayeiranmahsang%3Fed%3D2560#59%D8%A8%D9%87%20%DB%8C%D8%A7%D8%AF%20%D8%B3%D8%A7%D8%B1%DB%8C%D9%86%D8%A7
 
 vless://cba0b35b-8943-4c70-a864-9f78145b7897@www.speedtest.net:443?encryption=none&security=tls&sni=barayeiranmahsang.mahsaamini.dpdns.org&fp=random&allowInsecure=1&type=ws&host=barayeiranmahsang.mahsaamini.dpdns.org&path=%2FBaRAyeIran%3Fed%3D2560#68%D8%A8%D9%87%20%DB%8C%D8%A7%D8%AF%20%D8%B3%D8%A7%D8%B1%DB%8C%D9%86%D8%A7
 
 vless://4179c595-08ca-45cd-b555-91b6f1faeadc@104.25.105.4:443?encryption=none&security=tls&sni=di.dibdibini.dpdns.org&fp=random&type=ws&host=di.dibdibini.dpdns.org&path=%2F%3Fed%3D2560#60%D8%A8%D9%87%20%DB%8C%D8%A7%D8%AF%20%D8%B3%D8%A7%D8%B1%DB%8C%D9%86%D8%A7
 
-vless://6f690965-3be3-43bb-9331-3ead6efb20aa@104.21.200.70:443?encryption=none&security=tls&sni=sib.sibzamini.dpdns.org&fp=random&type=ws&host=sib.sibzamini.dpdns.org&path=%2FBarayeiranmahsang%3Fed%3D2560#63%D8%A8%D9%87%20%DB%8C%D8%A7%D8%AF%20%D8%B3%D8%A7%D8%B1%DB%8C%D9%86%D8%A7
+vless://6f690965-3be3-43bb-9331-3ead6efb20aa@104.21.200.70:443?encryption=none&security=tls&sni=barayeiranmahsang.sibzamini.dpdns.org&fp=random&type=ws&host=barayeiranmahsang.sibzamini.dpdns.org.&path=%2FBarayeiranmahsang%3Fed%3D2560#63%D8%A8%D9%87%20%DB%8C%D8%A7%D8%AF%20%D8%B3%D8%A7%D8%B1%DB%8C%D9%86%D8%A7
 
-vless://6f690965-3be3-43bb-9331-3ead6efb20aa@104.25.127.173:443?encryption=none&security=tls&sni=sib.sibzamini.dpdns.org&fp=random&type=ws&host=sib.sibzamini.dpdns.org&path=%2FBaRAyeIran%3Fed%3D2560#67%D8%A8%D9%87%20%DB%8C%D8%A7%D8%AF%20%D8%B3%D8%A7%D8%B1%DB%8C%D9%86%D8%A7
+vless://6f690965-3be3-43bb-9331-3ead6efb20aa@104.18.26.90:443?encryption=none&security=tls&sni=barayeiranmahsang.sibzamini.dpdns.org&fp=random&type=ws&host=barayeiranmahsang.sibzamini.dpdns.org.&path=%2FBaRAyeIran%3Fed%3D2560#67%D8%A8%D9%87%20%DB%8C%D8%A7%D8%AF%20%D8%B3%D8%A7%D8%B1%DB%8C%D9%86%D8%A7
 
 vless://4179c595-08ca-45cd-b555-91b6f1faeadc@104.27.101.188:443?encryption=none&security=tls&sni=di.dibdibini.dpdns.org&fp=random&type=ws&host=di.dibdibini.dpdns.org&path=%2FBaRAyeIran%3Fed%3D2560#66%D8%A8%D9%87%20%DB%8C%D8%A7%D8%AF%20%D8%B3%D8%A7%D8%B1%DB%8C%D9%86%D8%A7
 
