--- a/config
+++ b/config
@@ -1,59 +1,5 @@
-vless://dfdf1c0a-5e52-4746-88bd-19d4e4ac7853@www.speedtest.net:443?encryption=none&security=tls&sni=barayeiranmahsang.juveitaly.dpdns.org&fp=random&type=ws&host=barayeiranmahsang.juveitaly.dpdns.org&path=%2FBarayeiranmahsang%3Fed%3D2560#Barayeiran%201
+vless://ce035748-9913-40c9-9fb6-c8389f7cdcf3@172.66.40.99:2083?encryption=none&security=tls&sni=yousef.varzesh.dpdns.org&fp=random&allowInsecure=1&type=ws&host=yousef.varzesh.dpdns.org&path=%2F%3Fed%3D2560#%23Barayeiran1
 
-vless://dfdf1c0a-5e52-4746-88bd-19d4e4ac7853@104.26.7.89:443?encryption=none&security=tls&sni=barayeiranmahsang.juveitaly.dpdns.org&fp=random&type=ws&host=barayeiranmahsang.juveitaly.dpdns.org&path=%2FBarayeiranmahsang%3Fed%3D2560#Barayeiran%202
+vless://ce035748-9913-40c9-9fb6-c8389f7cdcf3@104.17.148.22:2083?encryption=none&security=tls&sni=yousef.varzesh.dpdns.org&fp=random&allowInsecure=1&type=ws&host=yousef.varzesh.dpdns.org&path=%2F%3Fed%3D2560#%23Barayeiran2
 
-vless://dfdf1c0a-5e52-4746-88bd-19d4e4ac7853@104.24.248.141:80?encryption=none&security=none&sni=barayeiranmahsang.juveitaly.dpdns.org&fp=random&type=ws&host=barayeiranmahsang.juveitaly.dpdns.org&path=%2FBarayeiranmahsang%3Fed%3D2560#Barayeiran%203
-
-vless://e6236ebc-7334-4bed-977f-0c20bcdfcc00@172.66.40.99:443?encryption=none&security=tls&sni=barayeiranmahsang.ghormehsabzi.dpdns.org&fp=random&type=ws&host=barayeiranmahsang.ghormehsabzi.dpdns.org&path=%2F%3Fed%3D2560#Barayeiran%204
-
-vless://e6236ebc-7334-4bed-977f-0c20bcdfcc00@104.27.102.73:443?encryption=none&security=tls&sni=barayeiranmahsang.ghormehsabzi.dpdns.org&fp=random&type=ws&host=barayeiranmahsang.ghormehsabzi.dpdns.org&path=%2F%3Fed%3D2560#Barayeiran%205
-
-vless://e6236ebc-7334-4bed-977f-0c20bcdfcc00@172.67.221.35:443?encryption=none&security=tls&sni=barayeiranmahsang.ghormehsabzi.dpdns.org&fp=random&type=ws&host=barayeiranmahsang.ghormehsabzi.dpdns.org&path=%2F%3Fed%3D2560#Barayeiran%206
-
-vless://e6236ebc-7334-4bed-977f-0c20bcdfcc00@162.159.46.245:443?encryption=none&security=tls&sni=barayeiranmahsang.ghormehsabzi.dpdns.org&fp=random&type=ws&host=barayeiranmahsang.ghormehsabzi.dpdns.org&path=%2FBarayeiranmahsang%3Fed%3D2560#Barayeiran%207
-
-vless://e6236ebc-7334-4bed-977f-0c20bcdfcc00@172.66.160.24:443?encryption=none&security=tls&sni=barayeiranmahsang.ghormehsabzi.dpdns.org&fp=random&type=ws&host=barayeiranmahsang.ghormehsabzi.dpdns.org&path=%2F%3Fed%3D2560#Barayeiran%208
-
-vless://cba0b35b-8943-4c70-a864-9f78145b7897@172.66.40.99:443?encryption=none&security=tls&sni=barayeiranmahsang.mahsaamini.dpdns.org&fp=random&allowInsecure=1&type=ws&host=barayeiranmahsang.mahsaamini.dpdns.org&path=%2FBarayeiranmahsang%3Fed%3D2560#Barayeiran%209
-
-vless://dfdf1c0a-5e52-4746-88bd-19d4e4ac7853@104.21.0.150:8080?encryption=none&security=none&sni=barayeiranmahsang.juveitaly.dpdns.org&fp=random&type=ws&host=barayeiranmahsang.juveitaly.dpdns.org&path=%2FBaRAyeIran%3Fed%3D2560#Barayeiran%2010
-
-vless://8c17092b-4d89-44e3-9dcb-a00c2bf28827@104.18.41.9:443?encryption=none&security=tls&sni=barayeiranmahsang.bahareh.dpdns.org&fp=random&type=ws&host=barayeiranmahsang.bahareh.dpdns.org&path=%2FBarayeiranmahsang%3Fed%3D2560#Barayeiran%2011
-
-vless://148709e4-402b-48dd-8892-ed39b55ea45c@172.66.40.99:443?encryption=none&security=tls&sni=barayeiran-mahsang.loseyourself.dpdns.org&fp=random&type=ws&host=barayeiran-mahsang.loseyourself.dpdns.org.&path=%2FBarayeiranmahsang%3Fed%3D2560#Barayeiran%2012
-
-vless://148709e4-402b-48dd-8892-ed39b55ea45c@www.speedtest.net:443?encryption=none&security=tls&sni=barayeiran-mahsang.loseyourself.dpdns.org&fp=random&type=ws&host=barayeiran-mahsang.loseyourself.dpdns.org.&path=%2FBarayeiranmahsang%3Fed%3D2560#Barayeiran%2013
-
-vless://148709e4-402b-48dd-8892-ed39b55ea45c@104.25.158.102:443?encryption=none&security=tls&sni=barayeiran-mahsang.loseyourself.dpdns.org&fp=random&type=ws&host=barayeiran-mahsang.loseyourself.dpdns.org.&path=%2FBarayeiranmahsang%3Fed%3D2560#Barayeiran%2014
-
-vless://148709e4-402b-48dd-8892-ed39b55ea45c@172.67.251.211:443?encryption=none&security=tls&sni=barayeiran-mahsang.loseyourself.dpdns.org&fp=random&type=ws&host=barayeiran-mahsang.loseyourself.dpdns.org.&path=%2FBarayeiranmahsang%3Fed%3D2560#Barayeiran%2015
-
-vless://148709e4-402b-48dd-8892-ed39b55ea45c@172.66.40.99:443?encryption=none&security=tls&sni=barayeiran-mahsang.loseyourself.dpdns.org&fp=random&type=ws&host=barayeiran-mahsang.loseyourself.dpdns.org.&path=%2FBarayeiranmahsang%3Fed%3D2560#Barayeiran%2016
-
-vless://8c17092b-4d89-44e3-9dcb-a00c2bf28827@www.speedtest.net:80?encryption=none&security=none&sni=barayeiranmahsang.bahareh.dpdns.org&fp=random&type=ws&host=barayeiranmahsang.bahareh.dpdns.org.&path=%2F%3Fed%3D2560#Barayeiran%2017
-
-vless://8c17092b-4d89-44e3-9dcb-a00c2bf28827@104.26.6.89:80?encryption=none&security=none&sni=barayeiranmahsang.bahareh.dpdns.org&fp=random&type=ws&host=barayeiranmahsang.bahareh.dpdns.org&path=%2F%3Fed%3D2560#Barayeiran%2018
-
-vless://8c17092b-4d89-44e3-9dcb-a00c2bf28827@172.66.40.99:443?encryption=none&security=tls&sni=barayeiranmahsang.bahareh.dpdns.org&alpn=h2%2Chttp%2F1.1&fp=random&type=ws&host=barayeiranmahsang.bahareh.dpdns.org&path=%2F%3Fed%3D2560#Barayeiran%2019
-
-vless://8c17092b-4d89-44e3-9dcb-a00c2bf28827@104.26.7.89:80?encryption=none&security=none&sni=barayeiranmahsang.bahareh.dpdns.org&fp=random&type=ws&host=barayeiranmahsang.bahareh.dpdns.org.&path=%2F%3Fed%3D2560#Barayeiran%2020
-
-vless://8c17092b-4d89-44e3-9dcb-a00c2bf28827@172.66.40.99:80?encryption=none&security=none&sni=barayeiranmahsang.bahareh.dpdns.org&fp=random&type=ws&host=barayeiranmahsang.bahareh.dpdns.org&path=%2F%3Fed%3D2560#Barayeiran%2021
-
-vless://d1237c01-58b5-48f9-8a27-8a396b7f5422@104.26.7.89:8443?encryption=none&security=tls&sni=barayeiran-mahsang.nazanin.dpdns.org&fp=random&allowInsecure=1&type=ws&host=barayeiran-mahsang.nazanin.dpdns.org&path=%2FBarayeiranmahsang%3Fed%3D2560#Barayeiran%2022
-
-vless://d1237c01-58b5-48f9-8a27-8a396b7f5422@104.26.6.89:2096?encryption=none&security=tls&sni=barayeiran-mahsang.nazanin.dpdns.org&fp=random&allowInsecure=1&type=ws&host=barayeiran-mahsang.nazanin.dpdns.org&path=%2FBarayeiranmahsang%3Fed%3D2560#Barayeiran%2023
-
-vless://d1237c01-58b5-48f9-8a27-8a396b7f5422@172.66.40.99:80?encryption=none&security=none&sni=barayeiran-mahsang.nazanin.dpdns.org&fp=random&allowInsecure=1&type=ws&host=barayeiran-mahsang.nazanin.dpdns.org&path=%2FBarayeiranmahsang%3Fed%3D2560#Barayeiran%2024
-
-vless://d1237c01-58b5-48f9-8a27-8a396b7f5422@www.speedtest.net:80?encryption=none&security=none&sni=barayeiran-mahsang.nazanin.dpdns.org&fp=random&allowInsecure=1&type=ws&host=barayeiran-mahsang.nazanin.dpdns.org&path=%2FBarayeiranmahsang%3Fed%3D2560#Barayeiran%2025
-
-vless://cba0b35b-8943-4c70-a864-9f78145b7897@www.speedtest.net:443?encryption=none&security=tls&sni=barayeiranmahsang.mahsaamini.dpdns.org&fp=random&allowInsecure=1&type=ws&host=barayeiranmahsang.mahsaamini.dpdns.org&path=%2FBarayeiranmahsang%3Fed%3D2560#Barayeiran%2026
-
-vless://cba0b35b-8943-4c70-a864-9f78145b7897@104.17.147.22:443?encryption=none&security=tls&sni=barayeiranmahsang.mahsaamini.dpdns.org&fp=random&allowInsecure=1&type=ws&host=barayeiranmahsang.mahsaamini.dpdns.org&path=%2FBarayeiranmahsang%3Fed%3D2560#Barayeiran%2027
-
-vless://cba0b35b-8943-4c70-a864-9f78145b7897@104.21.36.57:443?encryption=none&security=tls&sni=barayeiranmahsang.mahsaamini.dpdns.org&fp=random&allowInsecure=1&type=ws&host=barayeiranmahsang.mahsaamini.dpdns.org&path=%2FBarayeiranmahsang%3Fed%3D2560#Barayeiran%2028
-
-vless://cba0b35b-8943-4c70-a864-9f78145b7897@172.64.80.1:443?encryption=none&security=tls&sni=barayeiranmahsang.mahsaamini.dpdns.org&fp=random&allowInsecure=1&type=ws&host=barayeiranmahsang.mahsaamini.dpdns.org&path=%2FBarayeiranmahsang%3Fed%3D2560#Barayeiran%2029
-
-vless://cba0b35b-8943-4c70-a864-9f78145b7897@172.67.71.145:443?encryption=none&security=tls&sni=barayeiranmahsang.mahsaamini.dpdns.org&fp=random&allowInsecure=1&type=ws&host=barayeiranmahsang.mahsaamini.dpdns.org&path=%2FBarayeiranmahsang%3Fed%3D2560#Barayeiran%2030
+vless://ce035748-9913-40c9-9fb6-c8389f7cdcf3@104.19.250.98:2083?encryption=none&security=tls&sni=yousef.varzesh.dpdns.org&fp=random&allowInsecure=1&type=ws&host=yousef.varzesh.dpdns.org&path=%2F%3Fed%3D2560#%23Barayeiran3
