--- a/config
+++ b/config
@@ -3,3 +3,35 @@ vless://ce035748-9913-40c9-9fb6-c8389f7cdcf3@172.66.40.99:2083?encryption=none&s
 vless://ce035748-9913-40c9-9fb6-c8389f7cdcf3@104.17.148.22:2083?encryption=none&security=tls&sni=yousef.varzesh.dpdns.org&fp=random&allowInsecure=1&type=ws&host=yousef.varzesh.dpdns.org&path=%2F%3Fed%3D2560#%23Barayeiran2
 
 vless://ce035748-9913-40c9-9fb6-c8389f7cdcf3@104.19.250.98:2083?encryption=none&security=tls&sni=yousef.varzesh.dpdns.org&fp=random&allowInsecure=1&type=ws&host=yousef.varzesh.dpdns.org&path=%2F%3Fed%3D2560#%23Barayeiran3
+
+vless://ebab6efe-5627-48f6-8b11-22d0a113c1d3@www.speedtest.net:443?encryption=none&security=tls&sni=xzxcxzs.pages.dev&fp=random&type=ws&host=xzxcxzs.pages.dev&path=%2F%3Fed%3D2048#Barayeiran4
+
+vless://82de262c-cd5e-402f-a709-f6979fc7c93e@www.speedtest.net:443?encryption=none&security=tls&sni=fragrant-star-ebf2.daheg47484.workers.dev&fp=chrome&type=ws&host=fragrant-star-ebf2.daheg47484.workers.dev&path=%2F%3Fed%3D2048#Barayeiran5
+
+vless://18ff277a-3b9a-46a0-842e-290f2b0661d2@whatismyipaddress.com:443?encryption=none&security=tls&sni=hidden-base-217b.powas74490.workers.dev&fp=chrome&type=ws&host=hidden-base-217b.powas74490.workers.dev&path=%2F%3Fed%3D2048#Barayeiran6
+
+trojan://cf142ac0-4bae-4c4b-9882-21fc0550a661@188.114.97.3:443?security=tls&sni=red-dream-2d6c.xepis84786.workers.dev&fp=chrome&type=ws&host=red-dream-2d6c.xepis84786.workers.dev&path=%2F%3Fed%3D2560#Barayeiran7
+
+vless://0c07016f-6238-4a17-a414-ab0ecd8a8b5e@npmjs.com:443?encryption=none&security=tls&sni=soft-wave-5d2a.kyng-ayaan.workers.dev&fp=random&type=ws&host=soft-wave-5d2a.kyng-ayaan.workers.dev&path=%2F%3Fed%3D2560#Barayeiran8
+
+vless://7df49a25-5785-41e0-a6ae-2369d68bfea3@188.114.97.3:443?encryption=none&security=tls&sni=red-morning-7c21.daheg47484.workers.dev&type=ws&host=red-morning-7c21.daheg47484.workers.dev&path=%2F%3Fed%3D2560#Barayeiran9
+
+vless://45d44338-30d2-439c-b765-90cb16f581c9@whatismyipaddress.com:443?encryption=none&security=tls&sni=broad-lake-d615.hegegi9101.workers.dev&alpn=h3%2Ch2%2Chttp%2F1.1&fp=randomized&type=ws&host=broad-lake-d615.hegegi9101.workers.dev&path=%2F%3Fed%3D2560#Barayeiran10
+
+vless://ebab6efe-5627-48f6-8b11-22d0a113c1d3@172.66.44.179:443?encryption=none&security=tls&sni=xzxcxzs.pages.dev&fp=random&type=ws&host=xzxcxzs.pages.dev&path=%2F%3Fed%3D2048#Barayeiran11
+
+vless://ebab6efe-5627-48f6-8b11-22d0a113c1d3@npmjs.com:443?encryption=none&security=tls&sni=xzxcxzs.pages.dev&fp=random&type=ws&host=xzxcxzs.pages.dev&path=%2F%3Fed%3D2048#Barayeiran12
+
+vless://82de262c-cd5e-402f-a709-f6979fc7c93e@npmjs.com:80?encryption=none&security=none&sni=fragrant-star-ebf2.daheg47484.workers.dev&fp=chrome&type=ws&host=fragrant-star-ebf2.daheg47484.workers.dev&path=%2F%3Fed%3D2048#Barayeiran13
+
+vless://18ff277a-3b9a-46a0-842e-290f2b0661d2@whatismyipaddress.com:80?encryption=none&security=none&sni=hidden-base-217b.powas74490.workers.dev&fp=randomized&type=ws&host=hidden-base-217b.powas74490.workers.dev&path=%2F%3Fed%3D2048#Barayeiran14
+
+vless://0c07016f-6238-4a17-a414-ab0ecd8a8b5e@npmjs.com:80?encryption=none&security=none&sni=soft-wave-5d2a.kyng-ayaan.workers.dev&fp=random&type=ws&host=soft-wave-5d2a.kyng-ayaan.workers.dev&path=%2F%3Fed%3D2560#Barayeiran15
+
+vless://7df49a25-5785-41e0-a6ae-2369d68bfea3@104.24.231.82:80?encryption=none&security=none&sni=red-morning-7c21.daheg47484.workers.dev&type=ws&host=red-morning-7c21.daheg47484.workers.dev&path=%2F%3Fed%3D2560#Barayeiran16
+
+vless://45d44338-30d2-439c-b765-90cb16f581c9@www.speedtest.net:80?encryption=none&security=none&sni=broad-lake-d615.hegegi9101.workers.dev&alpn=h3%2Ch2%2Chttp%2F1.1&fp=randomized&type=ws&host=broad-lake-d615.hegegi9101.workers.dev&path=%2F%3Fed%3D2560#Barayeiran17
+
+trojan://cf142ac0-4bae-4c4b-9882-21fc0550a661@whatismyipaddress.com:443?security=tls&sni=red-dream-2d6c.xepis84786.workers.dev&fp=random&type=ws&host=red-dream-2d6c.xepis84786.workers.dev&path=%2F%3Fed%3D2560#Barayeiran18
+
+trojan://cf142ac0-4bae-4c4b-9882-21fc0550a661@www.speedtest.net:443?security=tls&sni=red-dream-2d6c.xepis84786.workers.dev&alpn=h2%2Chttp%2F1.1&fp=chrome&type=ws&host=red-dream-2d6c.xepis84786.workers.dev&path=%2F%3Fed%3D2560#Barayeiran19
